# langchain-course

./: .gitignore  03-simple-langchain-real-api-call.py  04-real-world-data-search-tavily-weather.py  05-real-world-data-search-tavily-jobs.py  06-real-world-search-tavily-inbuilt-langchain.py  07-structured-outputwith-langchain-agent-pydantic.py  fake-weather-search-llm-agent.py  pyproject.toml
Pinecone Program/: 1-Pinecone-introduction.ipynb  2-creating-index-in-pinecone.ipynb  c-Upsert-text.ipynb
langchain-ai-agent/: 01-agent-loop-calling.py
pinecone_program/: b_creating_index_in_pinecone.py  c_upsert_text.ipynb  c_upsert_text.py  d_semantic_search.ipynb  d_semantic_search.py  i_creating_an_index.py  j_data_modeling.py
rag-programs/: 01-ingestion.py  ingestion.py  main.py
